# signal

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
dashboard/: index.html
docs/: ARCHITECTURE.md
grafana/provisioning/dashboards/: btc_pipeline.json  provider.yml
prometheus/: alert_rules.yml  prometheus.yml
scripts/: backfill.py
src/api/: main.py
src/api/routers/: correlations.py  features.py  health.py  model.py  prediction.py  price.py  sentiment.py
src/common/: config.py  database.py  logging.py  metrics.py
src/features/: builder.py
src/model/: predictor.py  trainer.py
src/scheduler/: crontab  entrypoint.sh
src/sentiment/: worker.py
src/sources/: base.py  coingecko.py  coingecko_runner.py  newsapi.py  newsapi_runner.py  onchain.py  onchain_runner.py  yahoo.py  yahoo_runner.py
tests/: conftest.py  test_coingecko.py  test_features.py  test_health.py
